# drifty

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  drifty-data-flow-semantics.md
bench/: CMakeLists.txt  dt_codesearch.c  dv_codesearch.c
cmake/: drifty-config.cmake.in
doc/: README.md  bit.md  block.md  cc_bcjr.md  cc_hybrid.md  cc_maxir.md  cc_vindel.md  cc_viterbi.md  concatenated.md  drifty_cc_spec.md  frame.md  freestanding.md  soft_decoding.md  stream.md
doc/bc/: rs251.md
doc/cc/: README.md  bcjr.md  ccode.md  detect.md  detect_clean.md  detect_full.md  detect_lean.md  detect_noisy.md  encoder.md  hybrid.md  maxir.md  vindel.md  viterbi.md
doc/fc/: README.md  marker.md  naive.md
doc/pipe/: README.md
doc/rs/: rs251.md
examples/: CMakeLists.txt  README.md  util.h
examples/01_basics/: README.md  main.c
examples/02_custom_code/: README.md  main.c
examples/03_decoders/: README.md  main.c
examples/04_soft_output/: README.md  main.c
examples/05_symbols/: README.md  main.c
examples/06_acquisition/: README.md  main.c
examples/07_block_rs251/: README.md  main.c
examples/08_frames_naive/: README.md  main.c
examples/09_frames_marker/: README.md  main.c
examples/10_concatenated/: README.md  main.c
examples/11_detect/: README.md  main.c
examples/12_pipe/: README.md  main.c
examples/13_funnel/: README.md  channel.c  channel.h  main.c  stack.c  stack.h
examples/14_pipeline/: README.md  funnel.c  funnel.h  layout.dot  main.c  stack.c  stack.h
include/drift_viterbi/: decode.h  drift_viterbi.h  encode.h  multi.h  multi_decode.h
include/drifty/: bcjr.h  bit.h  block_decoder.h  block_encoder.h  block_soft_decoder.h  ccode.h  compare.h  container.h  decode.h  decoder.h  drifty.h  encoder.h  frame_decoder.h  frame_encoder.h  frame_soft_decoder.h  hybrid.h  multi_decode.h  multi_encode.h  result.h  soft_bit.h  soft_decoder.h  stream_decoder.h  stream_encoder.h  stream_soft_decoder.h  vindel.h  viterbi.h
include/drifty/bc/: rs251.h
metrics/: CMakeLists.txt  METRICS.md  README.md  dt_metrics.c  dv_metrics.c  metrics.csv  plot_metrics.py  rate_grids.txt
metrics/bcjr/: CMakeLists.txt  METRICS.md  README.md  dt_bcjr_metrics.c  metrics.csv  plot_metrics.py  rate_grids.txt
metrics/detect/: metrics.csv
metrics/detect_clean/: CMakeLists.txt  METRICS.md  README.md  dt_detect_clean_metrics.c  plot_metrics.py  rate_grids.txt
metrics/detect_clean/tuned/: metrics.csv
metrics/detect_clean/untuned/: metrics.csv
metrics/detect_full/: CMakeLists.txt  METRICS.md  dt_detect_full_metrics.c  plot_metrics.py  rate_grids.txt
metrics/detect_full/tuned/: metrics.csv
metrics/detect_full/untuned/: metrics.csv
metrics/detect_lean/: CMakeLists.txt  METRICS.md  dt_detect_lean_metrics.c  plot_metrics.py
metrics/detect_lean/untuned/: metrics.csv
metrics/detect_noisy/: CMakeLists.txt  METRICS.md  README.md  dt_detect_noisy_metrics.c  plot_metrics.py  rate_grids.txt
metrics/detect_noisy/tuned/: metrics.csv
metrics/detect_noisy/untuned/: metrics.csv
metrics/hybrid/: METRICS.md  README.md  dt_metrics.c  plot_metrics.py
metrics/hybrid/overmatched/: metrics.csv
metrics/hybrid/tuned/: metrics.csv
metrics/hybrid/untuned/: metrics.csv
metrics/maxir/: CMakeLists.txt  METRICS.md  README.md  dt_maxir_metrics.c  plot_metrics.py  rate_grids.txt
metrics/maxir/overmatched/: metrics.csv
metrics/maxir/tuned/: metrics.csv
metrics/maxir/untuned/: metrics.csv
metrics/overmatched/: metrics.csv
metrics/untuned/: metrics.csv
metrics/vindel/: CMakeLists.txt  METRICS.md  README.md  dt_vindel_metrics.c  plot_metrics.py  rate_grids.txt
metrics/vindel/overmatched/: metrics.csv
metrics/vindel/tuned/: metrics.csv
metrics/vindel/untuned/: metrics.csv
metrics/viterbi/: CMakeLists.txt  METRICS.md  README.md  dt_viterbi_metrics.c  metrics.csv  plot_metrics.py  rate_grids.txt
src/: bcjr.c  ccode.c  ccode_internal.h  compare.c  container.c  decode.c  decode_internal.h  encode.c  hybrid.c  multi.c  multi_decode.c  multi_encode.c  vindel.c  viterbi.c
src/bc/: rs251.c
src/bcjr/: decode.c  decode.h  encode.c  encode.h
src/cc/: bcjr.c  ccode.c  ccode_internal.h  detect.c  detect_clean.c  detect_full.c  detect_lean.c  detect_noisy.c  hybrid.c  maxir.c  result.h  vindel.c  viterbi.c
src/fc/: marker.c  naive.c
src/hybrid/: compare.c  decode.c  decode.h  decode_internal.h  drifty.h  dt_internal.h  encode.c  multi_decode.c  multi_decode.h  multi_encode.c  multi_encode.h
src/pipe/: bufcore.h  fifo.h  frames.c  multi.c  pipeline.c  pipes.c  streams.c
src/rs/: rs251.c
src/vindel/: decode.c  decode.h  decode_internal.h  encode.c  encode.h
src/viterbi/: decode.c  encode.h
stdlib/: CMakeLists.txt
stdlib/include/drifty/: stdlib.h
stdlib/src/: stdlib.c
tests/: CMakeLists.txt  compare_test.c  decoder_test.c  detect_test.c  dt_test_util.h  dv_test_util.h  multi_encode_test.c  multi_test.c
tests/bc/: CMakeLists.txt  rs251_block_soft_test.c  rs251_block_test.c
tests/bcjr/: bcjr_decoder_test.c  dt_test_util.h
tests/cc/: CMakeLists.txt
tests/cc/bcjr/: CMakeLists.txt  bcjr_decoder_test.c  dt_test_util.h
tests/cc/detect/: CMakeLists.txt  detect_decoder_test.c
tests/cc/detect_clean/: CMakeLists.txt  detect_clean_decoder_test.c
tests/cc/detect_full/: CMakeLists.txt  detect_full_decoder_test.c
tests/cc/detect_lean/: CMakeLists.txt  detect_lean_decoder_test.c
tests/cc/detect_noisy/: CMakeLists.txt  detect_noisy_decoder_test.c
tests/cc/hybrid/: CMakeLists.txt  decoder_test.c  dt_test_util.h  soft_decoder_test.c
tests/cc/maxir/: CMakeLists.txt  dt_test_util.h  maxir_decoder_test.c
tests/cc/vindel/: CMakeLists.txt  dt_test_util.h  vindel_decoder_test.c
tests/cc/viterbi/: CMakeLists.txt  dt_test_util.h  viterbi_decoder_test.c
tests/fc/: CMakeLists.txt  marker_test.c  naive_test.c
tests/hybrid/: CMakeLists.txt  decoder_test.c  dt_test_util.h  soft_decoder_test.c
tests/rs/: CMakeLists.txt  rs251_block_soft_test.c  rs251_block_test.c
tests/vindel/: dt_test_util.h  vindel_decoder_test.c
tests/viterbi/: dt_test_util.h
(+70 files in other folders)
